# 215-project-part-2

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pkgx.yaml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: dashboard.py
databricks/: analysis.ipynb
pipeline/: config.py  database.py  extract.py  load.py  logging_config.py  main.py  transform.py
sql/: OLAP_schema.sql  OLTP_schema.sql  schema.sql
tests/: test_extract.py  test_id_mapping.py  test_load.py  test_schema_alignment.py  test_transform.py
